--- a/nginx.conf
+++ b/nginx.conf
@@ -86,9 +86,21 @@ http {
         fastcgi_param PATH_INFO $fastcgi_path_info;
     }
 
+    location ^~ /sockjs-node/ {
+        proxy_pass http://frontend:4200;
+
+        # proxy_set_header Host $host;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+
+        proxy_http_version 1.1;
+        proxy_cache_bypass $http_upgrade;
+    }
+
     location / {
         proxy_pass http://frontend:4200;
-        proxy_set_header Host localhost;
+
+        # proxy_set_header Host $host;
         proxy_set_header Upgrade $http_upgrade;
         proxy_set_header Connection 'upgrade';
 
