--- a/backend/composer.json
+++ b/backend/composer.json
@@ -6,10 +6,12 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "composer/package-versions-deprecated": "^1.11",
+        "doctrine/annotations": "^1.11",
         "doctrine/doctrine-bundle": "^2.1",
         "doctrine/doctrine-migrations-bundle": "^3.0",
         "doctrine/orm": "^2.7",
         "nelmio/api-doc-bundle": "^4.0",
+        "phpdocumentor/reflection-docblock": "^5.2",
         "sensio/framework-extra-bundle": "^5.6",
         "symfony/asset": "5.1.*",
         "symfony/console": "5.1.*",
@@ -17,6 +19,10 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
         "symfony/intl": "5.1.*",
+        "symfony/property-access": "5.1.*",
+        "symfony/property-info": "5.1.*",
+        "symfony/serializer": "5.1.*",
+        "symfony/validator": "5.1.*",
         "symfony/yaml": "5.1.*"
     },
     "require-dev": {
@@ -71,6 +77,8 @@
         "post-update-cmd": [
             "@auto-scripts"
         ],
+
+        "clear": "bin/console cache:clear",
         "make-list": "bin/console list make",
         "make-controller" : "bin/console make:constroller",
         "make-entity" : "bin/console make:entity",
@@ -79,6 +87,9 @@
         "make-fixtures" : "bin/console make:fixtures",
         "load-fixtures" : "bin/console doctrine:fixtures:load",
         "api-doc" : "bin/console debug:router",
+
+        "sql": "bin/console doctrine:query:sql 'SELECT * FROM user'",
+
         "code-check": [
             "phpcs ./src ./tests --extensions=php --standard=./phpcs.xml --report=code --report-width=120"
         ],
