--- a/backend/composer.json
+++ b/backend/composer.json
@@ -16,6 +16,7 @@
         "symfony/asset": "5.1.*",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
+        "symfony/event-dispatcher": "5.1.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
         "symfony/intl": "5.1.*",
@@ -84,10 +85,18 @@
         "make-controller" : "bin/console make:constroller",
         "make-entity" : "bin/console make:entity",
         "make-migration" : "bin/console make:migration",
-        "migrate" : "bin/console migrate",
+        "migrate" : "bin/console doctrine:migrations:migrate",
         "make-fixtures" : "bin/console make:fixtures",
         "load-fixtures" : "bin/console doctrine:fixtures:load --purge-with-truncate",
         "api-doc" : "bin/console debug:router",
+        "debug" : [
+            "bin/console debug:autowiring > /dev/null",
+            "bin/console debug:config > /dev/null",
+            "bin/console debug:container > /dev/null",
+            "bin/console debug:event-dispatcher > /dev/null",
+            "bin/console debug:router > /dev/null",
+            "bin/console debug:twig > /dev/null"
+        ],
 
         "sql": "bin/console doctrine:query:sql 'SELECT * FROM user'",
 
