--- a/backend/.env
+++ b/backend/.env
@@ -27,3 +27,10 @@ APP_SECRET=fc41ba35bbb00934481e299795accff8
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
 DATABASE_URL=mysql://root:@db:3306/blog?serverVersion=5.5
 ###< doctrine/doctrine-bundle ###
+
+###> symfony/messenger ###
+# Choose one of the transports below
+# MESSENGER_TRANSPORT_DSN=doctrine://default
+ MESSENGER_TRANSPORT_DSN=amqp://guest:guest@rabbit_mq:5672/%2f/messages
+# MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
+###< symfony/messenger ###
