--- a/backend/composer.json
+++ b/backend/composer.json
@@ -13,6 +13,7 @@
         "nelmio/api-doc-bundle": "^4.0",
         "phpdocumentor/reflection-docblock": "^5.2",
         "sensio/framework-extra-bundle": "^5.6",
+        "symfony/amqp-messenger": "5.1.*",
         "symfony/asset": "5.1.*",
         "symfony/console": "5.1.*",
         "symfony/dotenv": "5.1.*",
@@ -20,6 +21,7 @@
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.1.*",
         "symfony/intl": "5.1.*",
+        "symfony/messenger": "5.1.*",
         "symfony/property-access": "5.1.*",
         "symfony/property-info": "5.1.*",
         "symfony/serializer": "5.1.*",
@@ -85,6 +87,9 @@
         "make-controller" : "bin/console make:constroller",
         "make-entity" : "bin/console make:entity",
         "make-migration" : "bin/console make:migration",
+
+        "diff-migration" : "bin/console doctrine:migrations:diff",
+
         "migrate" : "bin/console doctrine:migrations:migrate",
         "make-fixtures" : "bin/console make:fixtures",
         "load-fixtures" : "bin/console doctrine:fixtures:load --purge-with-truncate",
@@ -98,6 +103,10 @@
             "bin/console debug:twig > /dev/null"
         ],
 
+        "validate": [
+            "bin/console doctrine:schema:validate --skip-sync -v"
+        ],
+
         "sql": "bin/console doctrine:query:sql 'SELECT * FROM user'",
 
         "code-check": [
@@ -108,9 +117,11 @@
             "php-cs-fixer fix --allow-risky yes --config ./php-cs-fixer.php ./src ./tests"
         ],
         "test": [
+            "@validate",
             "bin/phpunit --colors=always --testdox"
         ],
         "test-all": [
+            "@validate",
             "bin/phpunit --testsuite unit,integration,functional --colors=always --testdox"
         ]
     },
