add connection to centrifuge

--- a/backend/.env
+++ b/backend/.env
@@ -31,6 +31,11 @@ DATABASE_URL=mysql://root:@db:3306/blog?serverVersion=5.5
 ###> symfony/messenger ###
 # Choose one of the transports below
 # MESSENGER_TRANSPORT_DSN=doctrine://default
- MESSENGER_TRANSPORT_DSN=amqp://guest:guest@rabbit_mq:5672/%2f/messages
+MESSENGER_TRANSPORT_DSN=amqp://guest:guest@rabbit_mq:5672/%2f/messages
 # MESSENGER_TRANSPORT_DSN=redis://localhost:6379/messages
 ###< symfony/messenger ###
+
+CENTRIFUGO_WS_HOST=ws://localhost:8083
+CENTRIFUGO_API_HOST=http://centrifugo:8000
+CENTRIFUGO_API_KEY=secret
+CENTRIFUGO_SECRET=secret
