--- a/backend/config/services.yaml
+++ b/backend/config/services.yaml
@@ -11,6 +11,12 @@ services:
         autowire: true      # Automatically injects dependencies in your services.
         autoconfigure: true # Automatically registers your services as commands, event subscribers, etc.
 
+    phpcent\Client:
+        arguments:
+            - '%env(CENTRIFUGO_API_HOST)%/api'
+            - '%env(CENTRIFUGO_API_KEY)%'
+            - '%env(CENTRIFUGO_SECRET)%'
+
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
