--- a/z_config/nginx.conf
+++ b/z_config/nginx.conf
@@ -25,6 +25,11 @@ http {
   access_log /dev/stdout docker;
   include /etc/nginx/mime.types;
 
+  map $http_upgrade $connection_upgrade {
+      default upgrade;
+      ''      close;
+  }
+
   server {
     listen 80;
     listen [::]:80;
@@ -71,6 +76,33 @@ http {
     location /api {
         index index.php index.html index.htm;
         try_files $uri /index.php?$query_string;
+    }
+
+    location /centrifugo/ {
+        rewrite ^/centrifugo/(.*)        /$1 break;
+        proxy_pass_header Server;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Scheme $scheme;
+        proxy_pass http://centrifugo:8000;
+    }
+    location /centrifugo/connection {
+        rewrite ^/centrifugo(.*)        $1 break;
+        proxy_next_upstream error;
+        gzip on;
+        gzip_min_length 1000;
+        gzip_proxied any;
+        proxy_buffering off;
+        keepalive_timeout 65;
+        proxy_pass http://centrifugo:8000;
+        proxy_read_timeout 60s;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Scheme $scheme;
+        proxy_set_header Host $http_host;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection $connection_upgrade;
     }
 
     location /bundles {
