Add send email and message to telegram from component notifier

--- a/backend/.env
+++ b/backend/.env
@@ -39,3 +39,13 @@ CENTRIFUGO_WS_HOST=ws://localhost:8083
 CENTRIFUGO_API_HOST=http://centrifugo:8000
 CENTRIFUGO_API_KEY=secret
 CENTRIFUGO_SECRET=secret
+
+###> symfony/mailer ###
+MAILER_DSN=smtp://mailer:1025
+###< symfony/mailer ###
+
+TELEGRAM_DSN=telegram://1264040165:AAG0Nm9_SdGT6dkeh-rJKpoNZtwRFn7neh8@default?channel=410052419
+
+###> symfony/telegram-notifier ###
+# TELEGRAM_DSN=telegram://TOKEN@default?channel=CHAT_ID
+###< symfony/telegram-notifier ###
