--- a/backend/config/packages/messenger.yaml
+++ b/backend/config/packages/messenger.yaml
@@ -35,6 +35,16 @@ framework:
                         name: email
                     queues:
                         messages_email: ~
+            async_telegram:
+                dsn: '%env(MESSENGER_TRANSPORT_DSN)%'
+                retry_strategy:
+                    max_retries: 3
+                    multiplier: 1
+                options:
+                    exchange:
+                        name: telegram
+                    queues:
+                        messages_email: ~
 
             # https://symfony.com/doc/current/messenger.html#transport-configuration
 #             async: '%env(MESSENGER_TRANSPORT_DSN)%'
@@ -42,7 +52,8 @@ framework:
             # sync: 'sync://'
 
         routing:
-            App\Message\Article\IndexerMessage: async_es
+            App\Message\Article\IndexingArticleMessage: async_es
             App\Message\Article\SendEmailMessage: async_email
+            App\Message\Article\SendTelegramMessage: async_telegram
             # Route your messages to the transports
             # 'App\Message\YourMessage': async
