Add config for xDebug 3

--- a/z_config/backend/xdebug.ini
+++ b/z_config/backend/xdebug.ini
@@ -1,17 +1,23 @@
 [xdebug]
 xdebug.idekey = "PHPSTORM"
 
-xdebug.remote_autostart = 0
-xdebug.remote_connect_back = 0
-xdebug.remote_enable = 1
-xdebug.remote_handler = "dbgp"
-xdebug.remote_port = 9000
-xdebug.remote_host=WIN_HOST
+xdebug.mode=debug
+;xdebug.start_with_request=yes
 
-xdebug.trace_enable_trigger = 1
-xdebug.trace_enable_trigger_value = XDEBUG_TRACE
+;xdebug.remote_autostart = 0
+;xdebug.remote_connect_back = 0
+;xdebug.remote_enable = 1
+;xdebug.remote_handler = "dbgp"
+;xdebug.remote_port = 9000
+;xdebug.remote_host=WIN_HOST
 
-xdebug.profiler_enable_trigger = 1
-xdebug.profiler_enable_trigger_value = XDEBUG_PROFILE
-xdebug.profiler_output_dir = "/tmp/debug"
-xdebug.profiler_output_name = "cachegrind.out.%p"
+xdebug.client_host = WIN_HOST
+;xdebug.client_port = 9000
+
+;xdebug.trace_enable_trigger = 1
+;xdebug.trace_enable_trigger_value = XDEBUG_TRACE
+;
+;xdebug.profiler_enable_trigger = 1
+;xdebug.profiler_enable_trigger_value = XDEBUG_PROFILE
+;xdebug.profiler_output_dir = "/tmp/debug"
+;xdebug.profiler_output_name = "cachegrind.out.%p"
