--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3'
 
 services:
-  web-server:
+  web_server:
     image: nginx:1.15
     ports:
       - 8080:80
@@ -16,16 +16,12 @@ services:
     build:
       context: .
       dockerfile: z_config/backend/Dockerfile.fpm
-    extra_hosts:
-      WIN_HOST: ${WIN_HOST}
-#    environment:
-#      XDEBUG_CONFIG: "remote_host=172.27.80.1 remote_enable=1 remote_autostart=0 remote_port=9000"
-#      PHP_IDE_CONFIG: "serverName=dev.blog.kz"
-#      - XDEBUG_CONFIG=idekey=PHPSTORM remote_enable=1 remote_host=${WIN_HOST}
-#      - PHP_IDE_CONFIG=serverName=dev.blog.kz
+    environment:
+      - XDEBUG_CONFIG=client_host=${WIN_HOST} start_with_request=trigger
+      - XDEBUG_MODE=debug
+      - XDEBUG_SESSION=PHPSTORM
+      - PHP_IDE_CONFIG=serverName=php-fpm
     volumes:
-#      - /usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
-      - ./z_config/backend/xdebug.ini:/usr/local/etc/php/conf.d/xdebug.ini
       - ./backend:/app
     depends_on:
       - db
@@ -33,14 +29,31 @@ services:
       - rabbit_mq
       - redis
       - centrifugo
+  php_cli:
+    build:
+      context: .
+      dockerfile: z_config/backend/Dockerfile.cli
+    volumes:
+      - ./backend:/app
+#    restart: always
+#    tty: true
+    depends_on:
+      - db
+      - es
+      - rabbit_mq
+      - redis
+      - centrifugo
+      - mailer
   worker_indexer:
     build:
       context: .
       dockerfile: z_config/backend/Dockerfile.cli
-    extra_hosts:
-      WIN_HOST: ${WIN_HOST}
+    environment:
+      - XDEBUG_CONFIG=client_host=${WIN_HOST}
+      - XDEBUG_MODE=debug
+      - XDEBUG_SESSION=PHPSTORM
+      - PHP_IDE_CONFIG=serverName=worker-indexer
     volumes:
-      - ./z_config/backend/xdebug.ini:/usr/local/etc/php/conf.d/xdebug.ini
       - ./backend:/app
     restart: always
     scale: 1
@@ -51,15 +64,16 @@ services:
       - rabbit_mq
       - redis
       - centrifugo
-      - mailer
   worker_email:
     build:
       context: .
       dockerfile: z_config/backend/Dockerfile.cli
-    extra_hosts:
-      WIN_HOST: ${WIN_HOST}
+    environment:
+      - XDEBUG_CONFIG=client_host=${WIN_HOST}
+      - XDEBUG_MODE=debug
+      - XDEBUG_SESSION=PHPSTORM
+      - PHP_IDE_CONFIG=serverName=worker-email
     volumes:
-      - ./z_config/backend/xdebug.ini:/usr/local/etc/php/conf.d/xdebug.ini
       - ./backend:/app
     restart: always
     scale: 2
@@ -70,11 +84,31 @@ services:
       - redis
       - centrifugo
       - mailer
+  worker_telegram:
+    build:
+      context: .
+      dockerfile: z_config/backend/Dockerfile.cli
+    environment:
+      - XDEBUG_CONFIG=client_host=${WIN_HOST}
+      - XDEBUG_MODE=debug
+      - XDEBUG_SESSION=PHPSTORM
+      - PHP_IDE_CONFIG=serverName=worker-telegram
+    volumes:
+      - ./backend:/app
+    restart: always
+    scale: 1
+    command: bash -c "until $$(curl --output /dev/null --silent --head --fail http://rabbit_mq:15672); do echo 'Waiting RabbitMQ...'; sleep 1; done && php bin/console messenger:consume async_telegram -vv"
+    depends_on:
+      - db
+      - rabbit_mq
+      - redis
+      - centrifugo
   frontend:
     build:
       context: .
       dockerfile: z_config/frontend/Dockerfile
     command: ng serve --host frontend --public-host http://dev.blog.kz:8080 --disableHostCheck true
+    restart: always
     tty: true
     volumes:
       - ./frontend:/app
