--- a/backend/.env
+++ b/backend/.env
@@ -49,3 +49,5 @@ TELEGRAM_DSN=telegram://1264040165:AAG0Nm9_SdGT6dkeh-rJKpoNZtwRFn7neh8@default?c
 ###> symfony/telegram-notifier ###
 # TELEGRAM_DSN=telegram://TOKEN@default?channel=CHAT_ID
 ###< symfony/telegram-notifier ###
+
+ELASTIC_SEARCH_HOST=es
