--- a/backend/.env
+++ b/backend/.env
@@ -25,7 +25,8 @@ APP_SECRET=fc41ba35bbb00934481e299795accff8
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # For a PostgreSQL database, use: "postgresql://db_user:db_password@127.0.0.1:5432/db_name?serverVersion=11&charset=utf8"
 # IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:@db:3306/blog?serverVersion=5.5
+#DATABASE_URL=mysql://root:@db:3306/blog?serverVersion=5.7
+DATABASE_URL=postgresql://user:user@db:5432/blog?serverVersion=13&charset=utf8
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/messenger ###
