--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,4 @@
-language: php
+#language: php
 
 services:
   - docker
@@ -7,8 +7,8 @@ services:
 #  directories:
 #    - $HOME/.composer/cache/files
 
-php:
-  - "7.4"
+#php:
+#  - "7.4"
 
 install:
   - make build
