--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,7 +56,7 @@ services:
     volumes:
       - ./backend:/app
     restart: always
-    scale: 1
+#    scale: 1
     command: bash -c "wait-for-it db:3306 -s -t 60 && wait-for-it rabbit_mq:5672 -s -t 60 && php bin/console messenger:consume async_es -vv"
     depends_on:
       - db
@@ -76,7 +76,7 @@ services:
     volumes:
       - ./backend:/app
     restart: always
-    scale: 2
+#    scale: 2
     command: bash -c "wait-for-it db:3306 -s -t 60 && wait-for-it rabbit_mq:5672 -s -t 60 && php bin/console messenger:consume async_email -vv"
     depends_on:
       - db
@@ -96,7 +96,7 @@ services:
     volumes:
       - ./backend:/app
     restart: always
-    scale: 1
+#    scale: 1
     command: bash -c "wait-for-it db:3306 -s -t 60 && wait-for-it rabbit_mq:5672 -s -t 60 && php bin/console messenger:consume async_telegram -vv"
     depends_on:
       - db
