Remove travis cache

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,40 +6,36 @@ language: php
 services:
   - docker
 
-before_cache:
-  # Save tagged docker images
-  - >
-    mkdir -p $HOME/docker && docker images -a --filter='dangling=false' --format '{{.Repository}}:{{.Tag}} {{.ID}}'
-    | xargs -n 2 -t sh -c 'test -e $HOME/docker/$1.tar.gz || docker save $0 | gzip -2 > $HOME/docker/$1.tar.gz'
-
-before_install:
-  # Load cached docker images
-  - if [[ -d $HOME/docker ]]; then ls $HOME/docker/*.tar.gz | xargs -I {file} sh -c "zcat {file} | docker load"; fi
-
-cache:
-  bundler: true
-  directories:
-    - $HOME/docker
+#before_cache:
+#  # Save tagged docker images
+#  - >
+#    mkdir -p $HOME/docker && docker images -a --filter='dangling=false' --format '{{.Repository}}:{{.Tag}} {{.ID}}'
+#    | xargs -n 2 -t sh -c 'test -e $HOME/docker/$1.tar.gz || docker save $0 | gzip -2 > $HOME/docker/$1.tar.gz'
+#
+#before_install:
+#  # Load cached docker images
+#  - if [[ -d $HOME/docker ]]; then ls $HOME/docker/*.tar.gz | xargs -I {file} sh -c "zcat {file} | docker load"; fi
+#
+#cache:
+#  bundler: true
+#  directories:
+#    - $HOME/docker
 
 #cache:
 #  directories:
 #    - $HOME/.composer/cache/files
 
+cache: false
+
 install:
 #  - make build
   - make app-install
   - make app-init
-#  - cd backend/
-#  - composer install
 
 script:
   - make app-code-check
   - make app-test
   - make app-test-coverage
-#  - cd backend/
-#  - composer code-check
-#  - composer test
-#  - vendor/bin/phpunit --coverage-clover=coverage.xml
 
 after_success:
   - cd backend/
