--- a/backend/.env
+++ b/backend/.env
@@ -52,3 +52,4 @@ TELEGRAM_DSN=telegram://1264040165:AAG0Nm9_SdGT6dkeh-rJKpoNZtwRFn7neh8@default?c
 ###< symfony/telegram-notifier ###
 
 ELASTIC_SEARCH_HOST=es
+REDIS_DSN=tcp://redis:6379
