--- a/backend/config/services.yaml
+++ b/backend/config/services.yaml
@@ -22,6 +22,10 @@ services:
             - '%env(CENTRIFUGO_API_KEY)%'
             - '%env(CENTRIFUGO_SECRET)%'
 
+    Predis\Client:
+        arguments:
+            - '%env(REDIS_DSN)%'
+
     Symfony\Component\Security\Core\Encoder\PasswordEncoderInterface:
         class: Symfony\Component\Security\Core\Encoder\SodiumPasswordEncoder
 
