Fix phpstan Fatal error: Allowed memory size of 134217728 bytes exhausted (tried to allocate 32768 bytes)

--- a/backend/composer.json
+++ b/backend/composer.json
@@ -149,7 +149,7 @@
 
         "code-check": [
             "phpcs --report=code --report-width=120",
-            "phpstan analyse",
+            "php -d memory_limit=256M vendor/bin/phpstan analyse",
             "phpmd src --exclude src/Kernel.php ansi phpmd.ruleset.xml",
             "psalm",
             "phpinsights -n"
