--- a/backend/config/services.yaml
+++ b/backend/config/services.yaml
@@ -29,6 +29,10 @@ services:
     Symfony\Component\Security\Core\Encoder\PasswordEncoderInterface:
         class: Symfony\Component\Security\Core\Encoder\SodiumPasswordEncoder
 
+    App\Controller\ArgumentValueResolver:
+        tags:
+            - { name: controller.argument_value_resolver, priority: 50 }
+
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
     App\:
